--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -955,7 +955,7 @@ h4.pub-details {
 /* Publication preview */
 a.publication.preview {
 
-	box-shadow: 0 3px 8px rgba(0,0,0,0.3);
+	/* box-shadow: 0 3px 8px rgba(0,0,0,0.3); */
 }
 
 
