--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/mySearch.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/mySearch.jspx
@@ -11,6 +11,7 @@
     xmlns:buttons="urn:jsptagdir:/WEB-INF/tags/bstags/buttons"
     xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -47,48 +48,67 @@
       <div id="searchbox">
 	    
 	
-	    <form name="searchform" onsubmit="checkInput()">
-	      <fieldset class="fsVisible">
-	        <legend><fmt:message key="mysearch.option.header"/></legend>
-		<table border="0">
-			<tr>
-				<td><fmt:message key="mysearch.option.tag"/></td>
-				<td><fmt:message key="mysearch.option.author"/></td>
-			</tr>
-			<tr>
-				<td>
-					<select name="tags" size="10" onchange="clearFilter(); updateAuthorsForTags(); updateTitles(); showTitleList();" multiple="true"></select>	
-				</td>
-				<td>
-					<select name="authors" size="10" onchange="clearFilter(); updateTitles(); showTitleList();" multiple="true"></select>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<input type="radio" name="tag_op" value="and"/><fmt:message key="logic.and"/>
-					<input type="radio" name="tag_op" value="or" checked="true" /><fmt:message key="logic.or"/> 
-				</td>
-				<td>
-					<input type="radio" name="author_op" value="and"/><fmt:message key="logic.and"/>
-					<input type="radio" name="author_op" value="or" checked="true" /><fmt:message key="logic.or"/>
-				</td>
-			</tr>
-		</table>
-	</fieldset>
+	    <form class="" name="searchform" onsubmit="checkInput()">
+	      <bsform:fieldset legendKey="mysearch.option.header">
+	        <jsp:attribute name="content">
+	        
+	        
+	        <div class="row">
+	        	<div class="col-sm-6">
+      		        <div class="form-group">
+						<label for="tagSelection"><fmt:message key="mysearch.option.tag"/></label>
+						<select id="tagSelection" class="form-control" name="tags" size="10" onchange="clearFilter(); updateAuthorsForTags(); updateTitles(); showTitleList();" multiple="true"></select>
+					</div>
+					<div class="form-group">
+						<label class="radio-inline">
+				        	<input type="radio" name="tag_op" value="and" /> <fmt:message key="logic.and"/>
+				        </label>
+				        <label class="radio-inline">
+				        	<input type="radio" name="tag_op" value="or" checked="true" /> <fmt:message key="logic.or"/> 
+				        </label>
+			        </div>
+			        
+
+					
+	        	</div>
+	        	<div class="col-sm-6">
+	        		<div class="form-group">
+	        			<label for="authorSelection"><fmt:message key="mysearch.option.author"/></label>
+	        			<select id="authorSelection" class="form-control" name="authors" size="10" onchange="clearFilter(); updateTitles(); showTitleList();" multiple="true"></select>
+	        		</div>
+	        		<div class="form-group">
+	        			<label class="radio-inline">
+		        			<input type="radio" name="author_op" value="and"/> <fmt:message key="logic.and"/>
+		        		</label>
+		        		<label class="radio-inline">
+							<input type="radio" name="author_op" value="or" checked="true" /> <fmt:message key="logic.or"/>
+						</label>
+					</div>
+	        	</div>
+	        </div>
+	       </jsp:attribute> 
+
+	</bsform:fieldset>
 	<br/>
 	
 	<c:set var="listboxtitle"><fmt:message key="mysearch.option.filter.text"/></c:set>
-	<fieldset class="fsVisible">
-	<legend><fmt:message key="mysearch.option.result.header"/></legend>
-		<fmt:message key="mysearch.option.filter"/>&#160;
-		<input value='${listboxtitle}' name="filter" class="descriptiveLabel" type="text" size="40" onKeyUp="showTitleList();" />
-		<p>		
-			<div id='numresult' style="text-align:right; padding-bottom:2px; color:gray;">&#160;</div>
-			<div class="scroller">
-				<table class="result_table"><tbody id="resultlist"></tbody></table>
+	<bsform:fieldset legendKey="mysearch.option.result.header">
+		<jsp:attribute name="content">
+			<div class="form-group">
+				<label class="control-label" for="filter"><fmt:message key="mysearch.option.filter"/></label>
+				
+					<input class="form-control descriptiveLabel" value='${listboxtitle}' id="filter" name="filter" type="text" size="40" onKeyUp="showTitleList();" />
+				
 			</div>
-		</p>
-	</fieldset>
+			<p>		
+				<div id='numresult' style="text-align:right; padding-bottom:2px; color:gray;">&#160;</div>
+				<div class="scroller">
+					<table class="result_table"><tbody id="resultlist"></tbody></table>
+				</div>
+			</p>
+		
+		</jsp:attribute>
+	</bsform:fieldset>
 	</form>	
 </div>
 
