--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1407,4 +1407,10 @@ ul#urlList {
 	position:absolute;
 	display:none;
 }
+.autocompletion.form-control-feedback {
+	color: @gray;
+	font-size: @font-size-large;
+	top: 10px;
+	right: 7px;
+}
 
