--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
@@ -32,127 +32,11 @@
 			</parts:search>
 		</jsp:attribute>
 		
-		<jsp:attribute name="headerExt">
-			<link rel="stylesheet" type="text/css" href="${resdir}/css/adminlucene.css" />
-			<link rel="stylesheet" href="${resdir}/jquery/plugins/ui/jquery-ui.css" type="text/css" media="all" />
-			<link rel="stylesheet" href="${resdir}/jquery/plugins/ui/ui.theme.css" type="text/css" media="all" />
-			
-	    	<script type="text/javascript" src="${resdir}/jquery/plugins/form/jquery.form.js"><!-- keep me --></script> 
-			<!--  scripts for ajax autocompletion -->
-			<script src="${resdir}/jquery/plugins/bgiframe/jquery.bgiframe.js" type="text/javascript"><!--  --></script>
-			<script src="${resdir}/jquery/plugins/ui/jquery-ui.js" type="text/javascript"><!--  --></script>
-		  	<script src="${resdir}/jquery/plugins/ui/jquery-ui-i18n.js" type="text/javascript"><!--  --></script>
-		</jsp:attribute>
-		
 		<jsp:attribute name="content">
-			<style type="text/css">
-			    body {
-			        min-height: 80%;
-			    }
-			</style>
-
 			<div id="outerBox">
-				<!--  <h2>Manage Groups</h2> -->
-				<!--  autocomplete user info box -->
-				<script type="text/javascript">
-				<![CDATA[
-	  				$(function() {
-						addAutocomplete("#selectedGroupName", '2');
-	  			});
-	  				function addAutocomplete(id, type) {
-	  					$(id).autocomplete({
-	  						source: function ( request, response ) {
-	  							
-	  							return $.ajax({
-	  								url: "../ajax/usersearch",
-	  								data: {search:request.term, limit:10, showSpammers: false },
-	  								async: false,
-	  								success: function (data) {
-	  									var names = new Array();
-	  									$.each(data.items, function(index, item) {names.push(item.name);});
-	  									response( $.map( names, function( item ) {
-	  										return {
-	  											label: item,
-	  											value: item
-	  										}
-	  									}));
-	  								}
-	  								
-	  							});
-	  							
-	  					}
-	  					});  					
-	  				}
-	  			]]>
-				</script>
-			
-				<h2><fmt:message key="admin.actions.group"/></h2>
-	    		<!-- Box for adminmessages -->
-		      	<c:if test="${not empty command.adminResponse}">
-					<div class="adminResponse"><c:out value="${command.adminResponse}"/></div>
-			  	</c:if>
-				<form:form name="addgroup" action="${relativeUrlGenerator.getAdminUrlByName('group')}?action=createGroup">
-					<fieldset class="fsInner" style="margin-bottom: 8px;">
-						<div class="fsRow">
-							<form:label cssClass="fsLabel" path="group.name">Group name</form:label>
-				  			<form:input id="selectedGroupName" cssClass="fsInput" tabindex="1" path="group.name"/>
-				  			<div class="dissError"><form:errors path="group.name" /></div>
-			  			</div>
-			  			  
-						<!-- The privacylevel -->
-						<div class="fsRow">
-				      		<form:label cssClass="fsLabel" path="group.privlevel">Privacy</form:label>
-				      		<form:select cssClass="fsInput" tabindex="2" path="group.privlevel" size="1" multiple="false">
-								<c:forEach var="entry" items="${command.privlevel}">
-									<form:option value="${entry.value}" label="${entry.key}" />
-								</c:forEach>
-							</form:select>
-						</div>
-						  
-					 	  <!-- SharedDocuments -->
-						<div class="fsRow">
-							<form:label cssClass="fsLabel" path="group.sharedDocuments">Shared Documents</form:label>
-						    <form:checkbox tabindex="3" path="group.sharedDocuments" checked="checked" />
-						</div>
-						  
-			            <div class="clearfloat p">
-			  				<input type="submit" />
-			  			</div>
-					</fieldset>
-				</form:form>
-				<br />
-				<h2><fmt:message key="admin.group.pending"/></h2>
-	    		<table>
-		    	<c:forEach var="entry" items="${command.pendingGroups}">
-		    	<tr>
-				    <td>
-				    </td>
-				    <!-- show group name -->
-				    <td>
-				    	<a href="/group/${mtl:encodeURI(entry.name)}">
-				    	<c:out value="${entry.name}"/>
-				    	</a>
-				    </td>
-				    <!-- show request user name -->
-				    <td>
-				        <c:out value="${entry.groupRequest.userName}"/>
-				    </td>
-				    <!-- show request reason -->
-				    <td>
-				        <c:out value="${entry.groupRequest.reason}"/>
-				    </td>
-				    <!-- show request submission date -->
-				    <td>
-				        <c:out value="${entry.groupRequest.submissionDate}"/>
-				    </td>
-			        <td>
-                    	    <span class="groupsButtons">
-				            		<a href="/admin/group?action=acceptGroup&amp;group.name=${fn:escapeXml(entry.name)}"><fmt:message key="admin.actions.group.accept"/></a>${mtl:ch('nbsp')}<a href="/admin/group?action=declineGroup&amp;group.name=${fn:escapeXml(entry.name)}"><fmt:message key="admin.actions.group.decline"/></a>	
-				           	</span>
-                    </td>
-            	</tr>
-			</c:forEach>
-            </table>
+				<h2>@DEPRECATED</h2>
+				
+				Use the new layout.
 			</div>
 		</jsp:attribute>				
 	</layout:layout>
