--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
@@ -2,8 +2,10 @@
 <jsp:root version="2.0" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-	xmlns:editBook="urn:jsptagdir:/WEB-INF/tags/bstags/actions/edit/bookmark">
+	xmlns:editBook="urn:jsptagdir:/WEB-INF/tags/bstags/actions/edit/bookmark"
+	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form">
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
@@ -25,12 +27,12 @@
 							<div class="checkbox clearfix">
 								<label>
 									<input type="checkbox" class="help-popover"  tabindex="2" name="approved"/> <fmt:message key="goldStandard.edit.approveMsg"/>
-		<script type="text/javascript">
-									$(function() {
-										var check = ${command.approved};
-										$('input[name=approved]').prop('checked', check);
-									});
-		</script>
+										<script type="text/javascript">
+											$(function() {
+												var check = ${command.approved};
+												$('input[name=approved]').prop('checked', check);
+											});
+										</script>
 									<div class="help-header hide"><fmt:message key="goldStandard.edit.approveMsg"/></div>
 									<div class="help-content hide"><fmt:message key="goldStandard.edit.approveMsg.help"/></div>
 								</label>
