--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupRequest.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupRequest.jspx
@@ -66,7 +66,7 @@
 		 	+-->
 		<jsp:attribute name="content">
 		
-			<h1 class="content-heading"><c:out value="${heading}" /> <c:out value="${groupCreationMode}" /> + blub</h1>
+			<h1 class="content-heading"><c:out value="${heading}" /></h1>
 			
 			<!--+  
 				| description text how a group is created
